// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Transaction /> should render contract creation events correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SettlementTransaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress=""
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
            "formatNumber": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="sent"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SettlementTransaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <SettlementTransaction.style__DetailPanel
                header={
                        <SettlementTransaction.style__HeaderWrapper>
                                <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <SettlementTransaction.style__TypeText />
                                <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </SettlementTransaction.style__TransactionId>
                </SettlementTransaction.style__CollapsableContent>
        </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <SettlementTransaction.style__DetailPanel
          header={
                    <SettlementTransaction.style__HeaderWrapper>
                              <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <SettlementTransaction.style__TypeText />
                              <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </SettlementTransaction.style__TransactionHistoryTime>
                    </SettlementTransaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <SettlementTransaction.style__CollapsableContent>
                    <SettlementTransaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </SettlementTransaction.style__TransactionId>
          </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <SettlementTransaction.style__CollapsableContent>
            <SettlementTransaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
          "header": <SettlementTransaction.style__HeaderWrapper>
            <SettlementTransaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <SettlementTransaction.style__TypeText />
            <SettlementTransaction.style__TransactionHistoryTime>
                        01/09/1995
            </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__TransactionId
              onClick={[Function]}
>
              view_etherscan
</SettlementTransaction.style__TransactionId>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "view_etherscan",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "view_etherscan",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SettlementTransaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <SettlementTransaction.style__DetailPanel
                    header={
                              <SettlementTransaction.style__HeaderWrapper>
                                        <SettlementTransaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <SettlementTransaction.style__TypeText />
                                        <SettlementTransaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </SettlementTransaction.style__TransactionHistoryTime>
                              </SettlementTransaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <SettlementTransaction.style__CollapsableContent>
                              <SettlementTransaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </SettlementTransaction.style__TransactionId>
                    </SettlementTransaction.style__CollapsableContent>
          </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <SettlementTransaction.style__DetailPanel
            header={
                        <SettlementTransaction.style__HeaderWrapper>
                                    <SettlementTransaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <SettlementTransaction.style__TypeText />
                                    <SettlementTransaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </SettlementTransaction.style__TransactionId>
            </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__CollapsableContent>
              <SettlementTransaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
            "header": <SettlementTransaction.style__HeaderWrapper>
              <SettlementTransaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <SettlementTransaction.style__TypeText />
              <SettlementTransaction.style__TransactionHistoryTime>
                            01/09/1995
              </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <SettlementTransaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</SettlementTransaction.style__TransactionId>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Transaction /> should render correctly tx type recieved 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SettlementTransaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress="0x00"
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
            "formatNumber": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="recieved"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SettlementTransaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <SettlementTransaction.style__DetailPanel
                header={
                        <SettlementTransaction.style__HeaderWrapper>
                                <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <SettlementTransaction.style__TypeText />
                                <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </SettlementTransaction.style__TransactionId>
                </SettlementTransaction.style__CollapsableContent>
        </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <SettlementTransaction.style__DetailPanel
          header={
                    <SettlementTransaction.style__HeaderWrapper>
                              <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <SettlementTransaction.style__TypeText />
                              <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </SettlementTransaction.style__TransactionHistoryTime>
                    </SettlementTransaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <SettlementTransaction.style__CollapsableContent>
                    <SettlementTransaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </SettlementTransaction.style__TransactionId>
          </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <SettlementTransaction.style__CollapsableContent>
            <SettlementTransaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
          "header": <SettlementTransaction.style__HeaderWrapper>
            <SettlementTransaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <SettlementTransaction.style__TypeText />
            <SettlementTransaction.style__TransactionHistoryTime>
                        01/09/1995
            </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__TransactionId
              onClick={[Function]}
>
              view_etherscan
</SettlementTransaction.style__TransactionId>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "view_etherscan",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "view_etherscan",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SettlementTransaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <SettlementTransaction.style__DetailPanel
                    header={
                              <SettlementTransaction.style__HeaderWrapper>
                                        <SettlementTransaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <SettlementTransaction.style__TypeText />
                                        <SettlementTransaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </SettlementTransaction.style__TransactionHistoryTime>
                              </SettlementTransaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <SettlementTransaction.style__CollapsableContent>
                              <SettlementTransaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </SettlementTransaction.style__TransactionId>
                    </SettlementTransaction.style__CollapsableContent>
          </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <SettlementTransaction.style__DetailPanel
            header={
                        <SettlementTransaction.style__HeaderWrapper>
                                    <SettlementTransaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <SettlementTransaction.style__TypeText />
                                    <SettlementTransaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </SettlementTransaction.style__TransactionId>
            </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__CollapsableContent>
              <SettlementTransaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
            "header": <SettlementTransaction.style__HeaderWrapper>
              <SettlementTransaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <SettlementTransaction.style__TypeText />
              <SettlementTransaction.style__TransactionHistoryTime>
                            01/09/1995
              </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <SettlementTransaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</SettlementTransaction.style__TransactionId>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Transaction /> should render correctly tx type sent 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SettlementTransaction
    amount="0.000000000000000001"
    confirmations="204"
    counterpartyAddress="0x00"
    defaultOpen={false}
    fiatEquivilent="$123.34 USD"
    intl={
        Object {
            "formatMessage": [Function],
            "formatNumber": [Function],
          }
    }
    onChange={[Function]}
    symbol="UKG"
    time={1995-01-09T04:19:09.000Z}
    type="sent"
    viewOnBlockExplorerClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <SettlementTransaction.style__DetailCollapse
        bordered={false}
        defaultActiveKey={null}
        onChange={[Function]}
>
        <SettlementTransaction.style__DetailPanel
                header={
                        <SettlementTransaction.style__HeaderWrapper>
                                <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                                />
                                <SettlementTransaction.style__TypeText />
                                <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                                </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
                }
                showArrow={false}
        >
                <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                onClick={[Function]}
                        >
                                view_etherscan
                        </SettlementTransaction.style__TransactionId>
                </SettlementTransaction.style__CollapsableContent>
        </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
      "className": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bordered": false,
        "children": <SettlementTransaction.style__DetailPanel
          header={
                    <SettlementTransaction.style__HeaderWrapper>
                              <SettlementTransaction.style__Image
                                        src="/public/images/assets/UKG.svg"
                              />
                              <SettlementTransaction.style__TypeText />
                              <SettlementTransaction.style__TransactionHistoryTime>
                                        01/09/1995
                              </SettlementTransaction.style__TransactionHistoryTime>
                    </SettlementTransaction.style__HeaderWrapper>
          }
          showArrow={false}
>
          <SettlementTransaction.style__CollapsableContent>
                    <SettlementTransaction.style__TransactionId
                              onClick={[Function]}
                    >
                              view_etherscan
                    </SettlementTransaction.style__TransactionId>
          </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
        "defaultActiveKey": null,
        "onChange": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "children": <SettlementTransaction.style__CollapsableContent>
            <SettlementTransaction.style__TransactionId
                        onClick={[Function]}
            >
                        view_etherscan
            </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
          "header": <SettlementTransaction.style__HeaderWrapper>
            <SettlementTransaction.style__Image
                        src="/public/images/assets/UKG.svg"
            />
            <SettlementTransaction.style__TypeText />
            <SettlementTransaction.style__TransactionHistoryTime>
                        01/09/1995
            </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
          "showArrow": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__TransactionId
              onClick={[Function]}
>
              view_etherscan
</SettlementTransaction.style__TransactionId>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "view_etherscan",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "view_etherscan",
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <SettlementTransaction.style__DetailCollapse
          bordered={false}
          defaultActiveKey={null}
          onChange={[Function]}
>
          <SettlementTransaction.style__DetailPanel
                    header={
                              <SettlementTransaction.style__HeaderWrapper>
                                        <SettlementTransaction.style__Image
                                                  src="/public/images/assets/UKG.svg"
                                        />
                                        <SettlementTransaction.style__TypeText />
                                        <SettlementTransaction.style__TransactionHistoryTime>
                                                  01/09/1995
                                        </SettlementTransaction.style__TransactionHistoryTime>
                              </SettlementTransaction.style__HeaderWrapper>
                    }
                    showArrow={false}
          >
                    <SettlementTransaction.style__CollapsableContent>
                              <SettlementTransaction.style__TransactionId
                                        onClick={[Function]}
                              >
                                        view_etherscan
                              </SettlementTransaction.style__TransactionId>
                    </SettlementTransaction.style__CollapsableContent>
          </SettlementTransaction.style__DetailPanel>
</SettlementTransaction.style__DetailCollapse>,
        "className": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "bordered": false,
          "children": <SettlementTransaction.style__DetailPanel
            header={
                        <SettlementTransaction.style__HeaderWrapper>
                                    <SettlementTransaction.style__Image
                                                src="/public/images/assets/UKG.svg"
                                    />
                                    <SettlementTransaction.style__TypeText />
                                    <SettlementTransaction.style__TransactionHistoryTime>
                                                01/09/1995
                                    </SettlementTransaction.style__TransactionHistoryTime>
                        </SettlementTransaction.style__HeaderWrapper>
            }
            showArrow={false}
>
            <SettlementTransaction.style__CollapsableContent>
                        <SettlementTransaction.style__TransactionId
                                    onClick={[Function]}
                        >
                                    view_etherscan
                        </SettlementTransaction.style__TransactionId>
            </SettlementTransaction.style__CollapsableContent>
</SettlementTransaction.style__DetailPanel>,
          "defaultActiveKey": null,
          "onChange": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "children": <SettlementTransaction.style__CollapsableContent>
              <SettlementTransaction.style__TransactionId
                            onClick={[Function]}
              >
                            view_etherscan
              </SettlementTransaction.style__TransactionId>
</SettlementTransaction.style__CollapsableContent>,
            "header": <SettlementTransaction.style__HeaderWrapper>
              <SettlementTransaction.style__Image
                            src="/public/images/assets/UKG.svg"
              />
              <SettlementTransaction.style__TypeText />
              <SettlementTransaction.style__TransactionHistoryTime>
                            01/09/1995
              </SettlementTransaction.style__TransactionHistoryTime>
</SettlementTransaction.style__HeaderWrapper>,
            "showArrow": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <SettlementTransaction.style__TransactionId
                onClick={[Function]}
>
                view_etherscan
</SettlementTransaction.style__TransactionId>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "view_etherscan",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "view_etherscan",
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
